test/fail/fail_5.prsl
// RUN: (%edir/prsl --codegen %s 2>&1) | filecheck %s
// RUN: (%edir/prsl %s 2>&1) | filecheck %s
// CHECK: fail_5.prsl:6:1: error: at 'b': Expect ';' after expression statement, got: b

a
b
c
d
e =0;